barre de nav + architecture ok

--- a/web/frontend/index.html
+++ b/web/frontend/index.html
@@ -11,12 +11,12 @@
     <!-- Materialize CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.1/css/materialize.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="/node_modules/angular-tooltips/dist/angular-tooltips.css" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/trix/0.9.2/trix.css">
-    <link rel="stylesheet" type="text/css" href="/frontend/assets/css/font-awesome.css">
-    <link rel="stylesheet" type="text/css" href="/node_modules/angular-notify/dist/angular-notify.css">
+    <!--<link href="/node_modules/angular-tooltips/dist/angular-tooltips.css" rel="stylesheet" type="text/css" />-->
+    <!--<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/trix/0.9.2/trix.css">-->
+    <!--<link rel="stylesheet" type="text/css" href="/frontend/assets/css/font-awesome.css">-->
+    <!--<link rel="stylesheet" type="text/css" href="/node_modules/angular-notify/dist/angular-notify.css">-->
 
-    <link rel="stylesheet" href="/frontend/assets/css/style.css ">
+    <link rel="stylesheet" href="/assets/style.css ">
 
     <!--<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
@@ -26,58 +26,22 @@
     <!-- JavaScript for: jQuery, angular, materialize, and angular-materialize. All of which are needed. -->
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.3/angular.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.3/angular-cookies.js"></script>
+    <!--<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.3/angular-cookies.js"></script>-->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.1/js/materialize.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-materialize/0.2.2/angular-materialize.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.3/angular-resource.js"></script>
+    <!--<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.3/angular-resource.js"></script>-->
+    <script src="//unpkg.com/angular-ui-router/release/angular-ui-router.min.js"></script>
 
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.0-rc.1/angular-ui-router.js"></script>
-
-    <script src="frontend/app/app.module.js"></script>
-    <script src="frontend/app/app.routes.js"></script>
-    <script src="frontend/app/app.constant.js"></script>
-    <script src="frontend/app/app.run.js"></script>
-    <script src="frontend/app/components/connexion/login.component.js"></script>
-    <script src="frontend/app/components/connexion/main.js"></script>
-    <script src="frontend/app/components/main/main.component.js"></script>
-    <script src="frontend/app/components/home/home.component.js"></script>
-    <script src="frontend/app/components/nuage/nuage.component.js"></script>
-    <script src="frontend/app/components/questions/question_full.component.js"></script>
-    <script src="frontend/app/components/questions/question_post.component.js"></script>
-    <script src="frontend/app/components/questions/questions_list.component.js"></script>
-    <script src="frontend/app/components/ressources/ressources_list.component.js"></script>
-    <script src="frontend/app/components/ressources/ressource_post.component.js"></script>
-    <script src="frontend/app/components/user_profile_test_sacha/user_profile.component.js"></script>
-    <script src="frontend/app/components/answer/answer_post.component.js"></script>
-    <script src="frontend/app/components/answer/edit_answer.component.js"></script>
-    <script src="frontend/app/components/comment/comment_post.component.js"></script>
-    <script src="frontend/app/components/users/users_list.component.js"></script>
-    <script src="frontend/app/components/users/profil.component.js"></script>
-    <script src="frontend/app/components/edit_post/edit_post.component.js"></script>
-    <script src="frontend/app/components/tips/tips.component.js"></script>
-    <script src="frontend/app/components/tips/post_tip.component.js"></script>
-    <script src="frontend/app/components/jobs/jobs_list.component.js"></script>
-    <script src="frontend/app/components/jobs/job_post.component.js"></script>
-    <script src="frontend/app/services/users.service.js"></script>
-    <script src="frontend/app/services/questions.service.js"></script>
-    <script src="frontend/app/services/ressources.service.js"></script>
-    <script src="frontend/app/services/tags.service.js"></script>
-    <script src="frontend/app/services/taglink.service.js"></script>
-    <script src="frontend/app/services/job.service.js"></script>
-    <script src="frontend/app/services/tips.service.js"></script>
-    <script src="frontend/app/services/auth.service.js"></script>
+    <script src="/app.modules.js"></script>
+    <script src="/app.routes.js"></script>
+    <script src="/components/main/main.component.js"></script>
+   
     <script src="/node_modules/angular-utils-pagination/dirPagination.js"></script>
-    <script src="/node_modules/angular-tooltips/dist/angular-tooltips.js"></script>
+    <!--<script src="/node_modules/angular-tooltips/dist/angular-tooltips.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/trix/0.9.2/trix.js"></script>
     <script src="/node_modules/trix/dist/angular-trix.js"></script>
     <script src="/node_modules/angular-notify/dist/angular-notify.js"></script>
-    <script src="/node_modules/angular-sanitize/angular-sanitize.js"></script>
-
-
-
-    <script src="frontend/assets/js/init.js"></script>
-
+    <script src="/node_modules/angular-sanitize/angular-sanitize.js"></script>-->
 
     <title>ShareKan</title>
 </head>
