--- a/web/frontend/index.html
+++ b/web/frontend/index.html
@@ -31,6 +31,7 @@
     <script src="/components/kanlist/kanList.js"></script>
     <script src="/components/kanlists/kanLists.js"></script>
     <script src="/components/kanProfile/kanProfile.js"></script>
+    <script src="/components/myKanList/myKanList.js"></script>
     <script src="/services/kanList.js"></script>
     <script src="/node_modules/angular-utils-pagination/dirPagination.js"></script>
     <script src="https://cdn.jsdelivr.net/angular.youtube-embed/1.7.10/ng-youtube-embed.min.js"></script>
