Création de la page de vue de playlists

--- a/web/frontend/index.html
+++ b/web/frontend/index.html
@@ -34,8 +34,11 @@
     <script src="/components/kanInvitation/kanInvitation.js"></script>
     <script src="/services/kanList.js"></script>
     <script src="/services/kanInvitationService.js"></script>
+    <script src="/services/soundcloudcchiant.js"></script>
     <script src="/node_modules/angular-utils-pagination/dirPagination.js"></script>
     <script src="https://cdn.jsdelivr.net/angular.youtube-embed/1.7.10/ng-youtube-embed.min.js"></script>
+    <script src="/node_modules/angular-sanitize/angular-sanitize.js"></script>
+    <script src="https://e-cdns-files.dzcdn.net/js/min/dz.js"></script>
 </body>
 
 </html>
