--- a/web/frontend/index.html
+++ b/web/frontend/index.html
@@ -32,6 +32,7 @@
     <script src="/components/kanlists/kanLists.js"></script>
     <script src="/components/kanProfile/kanProfile.js"></script>
     <script src="/components/kanInvitation/kanInvitation.js"></script>
+    <script src="/components/home/home.js"></script>
     <script src="/services/kanList.js"></script>
     <script src="/services/kanInvitationService.js"></script>
     <script src="/services/soundcloudcchiant.js"></script>
