add the files for the login service

--- a/web/frontend/index.html
+++ b/web/frontend/index.html
@@ -29,6 +29,8 @@
     <script src="/app.routes.js"></script>
     <script src="/components/main/main.component.js"></script>
     <script src="/components/kanlist/kanList.js"></script>
+    <script src="/components/login/login.js"></script>
+    <script src="/services/loginService.js"></script>
     <script src="/components/kanlists/kanLists.js"></script>
     <script src="/components/kanProfile/kanProfile.js"></script>
     <script src="/components/kanInvitation/kanInvitation.js"></script>
