--- a/web/frontend/index.html
+++ b/web/frontend/index.html
@@ -41,6 +41,7 @@
     <script src="/node_modules/angular-utils-pagination/dirPagination.js"></script>
     <script src="https://cdn.jsdelivr.net/angular.youtube-embed/1.7.10/ng-youtube-embed.min.js"></script>
     <script src="/node_modules/angular-sanitize/angular-sanitize.js"></script>
+    <script src="/node_modules/angular-cookies/angular-cookies.min.js"></script>
     <script src="https://e-cdns-files.dzcdn.net/js/min/dz.js"></script>
 </body>
 
