--- a/web/frontend/index.html
+++ b/web/frontend/index.html
@@ -37,6 +37,7 @@
     <script src="/components/home/home.js"></script>
     <script src="/services/kanList.js"></script>
     <script src="/services/kanInvitationService.js"></script>
+    <script src="/services/userService.js"></script>
     <script src="/services/soundcloudcchiant.js"></script>
     <script src="/node_modules/angular-utils-pagination/dirPagination.js"></script>
     <script src="https://cdn.jsdelivr.net/angular.youtube-embed/1.7.10/ng-youtube-embed.min.js"></script>
